--- a/src/index.css
+++ b/src/index.css
@@ -7,32 +7,171 @@ body {
 }
 
 .container {
-  margin: 1rem;
+  margin: 0;
   text-align: center;
 }
 
 .nav {
-  background-color: #F0F2D7;
+  background-color: #666666;
   color: #000;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   gap: 2rem;
   padding: 0 1rem;
+  border-bottom: 3px outset #000;
+}
+
+.bar {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1px;
+}
+
+.topofbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.topofbar h2 {
+  font-size: 30px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding-top: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
+  text-align: center;
+  color: #DCD206;
+  text-shadow: 1px 1px 2px #000;
+}
+
+.nav img {
+  padding-top: 30px;
+  padding-left: 0px;
+  padding-bottom: 5px;
 }
 
 .site-title {
   font-size: 2rem;
   text-align: left;
-  text-shadow: 1px 1px 2px #DCD206;
-  font-family: 'Courier New', Courier, monospace;
+  text-shadow: 1px 1px 2px #000;
+  color: #DCD206;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.alignment {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
+  width: 12%;
+}
+
+.align {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  align-content: center;
+  width: 22%;
+}
+
+.dropbtn {
+  background-color: #EFE9D5;
+  color: #000;
+  padding-top: 0px;
+  font-size: 25px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: none;
+  cursor: pointer;
+  border-radius: 25px;
+  height: 40px;
+  width: 15rem;
+  fill-opacity: 90%;
+  border: 3px outset #000;
+}
+
+.dropbtton {
+  background-color: #EFE9D5;
+  color: #000;
+  padding-top: 0px;
+  font-size: 25px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  border: none;
+  cursor: pointer;
+  border-radius: 25px;
+  height: 40px;
+  width: 28rem;
+  fill-opacity: 90%;
+  border: 3px outset #000;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+  background-color: #EFE9D5;
+}
+
+.drop {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.search {
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  color: #000;
+  font-size: 25px;
+  padding-top: 5px;
+  background-color: #EFE9D5;
+  fill-opacity: 90%;
+  border: 3px outset #000;
+  border-radius: 25px;
+}
+
+.ulbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav ul {
   padding: 0;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   list-style: none;
   display: flex;
+  height: 40px;
+  width: 140px;
+  background-color: #DCD206;
+  border-radius: 25px;
+  border: 3px outset #000;
+  font-size: 20px;
   gap: 1rem;
 }
 
@@ -44,11 +183,42 @@ body {
   align-items: center;
   padding: .25rem;
   font-size: 2rem;
-  font-family: 'Courier New', Courier, monospace;
-  text-shadow: 1px 1px 2px #DCD206;
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .nav li:hover {
   background-color: #777;
+  border-radius: 25px;
 }
 
+.CustomLink {
+  font-size: 20px;
+}
+
+.bottomofbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  gap: 2px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding-bottom: 20px;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+
+.bottomofbar h1 {
+  font-size: 17px;
+  text-align: center;
+  color: #000;
+}
+
+.bottomofbar h2 {
+  font-size: 30px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  padding-left: 5px;
+  padding-right: 5px;
+  color: #DCD206;
+  text-shadow: 1px 1px 2px #000;
+}
